--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTFS Map</title>
-</head>
-<body>
-    
+<% layout('layouts/boilerplate') %>
     <ul>
-        <% for (let route of routes) { %> 
-            <li><a href="/<%=route.route_id%>"><%= route.route_short_name %> / <%= route.route_long_name %></a></li>
-        <% } %> 
+        <% for (let route of routes) { %>
+            <li><a href="/<%=route.route_id%>">
+                <%= route.route_short_name %> / <%= route.route_long_name %>
+            </a></li>
+        <% } %>
     </ul>
-
-    <form action="/" method="GET">
-        <label for="pageSelection">Go to Page</label>
-        <select name="page" id="pageSelection">
-            <% for (let i = 1; i <= Math.ceil(length/50); i++) {%>
-                <option value="<%=i%>" <%= i==page ? 'selected' : ''%>><%=i%></option>
-            <% } %>  
-        </select>
-        <button>Submit</button>
-    </form>
-
-</body>
-</html>
+    <nav class="pagination is-centered is-rounded is-small" role="navigation" aria-label="pagination">
+        <a class="pagination-previous" href="/?page=<%=page-1%>" <%=(page-1) <= 0 ? 'disabled' : ''%>>&laquo;</a>
+        <a class="pagination-next" href="/?page=<%=page+1%>" <%=(page+1) > Math.ceil(length/25) ? 'disabled' : ''%>>&raquo;</a>
+        <ul class="pagination-list">
+            <% for (let i=1; i <=Math.ceil(length/25); i++) {%>
+                <li>
+                    <a href="/?page=<%=i%>" class="pagination-link <%=i==page ? 'is-current' : ''%>" aria-label="Goto page <%=i%>"><%=i%></a>
+                </li>
+            <% } %>
+        </ul>
+    </nav>
