--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 
-<body class="container">
-    <main class="container is-max-desktop">
+<body class="container is-justify-content-center is-flex is-align-items-center" style="height: 100vh">
+    <main class="box container">
         <%- body %>
     </main>
 </body>
