--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,10 +11,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 
-<body class="is-justify-content-center is-flex is-align-items-center" style="height: 100vh">
+<body class="is-justify-content-center is-flex is-align-items-center" style="height: 100%">
     <main class="box container">
         <%- body %>
+        <footer class="footer">
+            <div class="content is-small has-text-centered">
+              <p>
+                <strong>GTFS Mapping App</strong> by <a href="https://github.com/edakhmetov">Eduard Akhmetov</a>. The source code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+              </p>
+            </div>
+          </footer>
     </main>
+    
 </body>
 
 </html>
