--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,17 +14,18 @@
 <body class="is-justify-content-center is-flex is-align-items-center" style="height: 100%">
     <main class="box container">
         <%- body %>
-        <footer class="footer">
-            <div class="content is-small has-text-centered">
-              <p>
-                <strong>GTFS Mapping App</strong> by <a href="https://github.com/edakhmetov">Eduard Akhmetov</a>. The source code is licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-              </p>
-            </div>
-          </footer>
+            <footer class="footer">
+                <div class="content is-small has-text-centered">
+                    <p>
+                        <strong>GTFS Mapping App</strong> by <a href="https://github.com/edakhmetov">Eduard
+                            Akhmetov</a>. The source code is licensed
+                        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                    </p>
+                </div>
+            </footer>
     </main>
-    
+
 </body>
 
 </html>
