--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,13 +14,11 @@
 <body class="is-justify-content-center is-flex is-align-items-center" style="height: 100%">
     <main class="box container">
         <%- body %>
-            <footer class="footer">
+            <footer class="box">
                 <div class="content is-small has-text-centered">
+                    <p>by <strong><a href="https://github.com/edakhmetov">Eduard Akhmetov.</a></strong></p>
                     <p>
-                        <strong>GTFS Mapping App</strong> by <a href="https://github.com/edakhmetov">Eduard
-                            Akhmetov</a>. The source code is licensed
-                        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                        <a href="https://transitfeeds.com/p/ttc/33">Data</a> is provided by the TTC. The source for this project can be found on <a href="https://github.com/edakhmetov/gtfs-mapping-app">github</a>.
                     </p>
                 </div>
             </footer>
