added hero to the boilerplate

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,6 +13,16 @@
 
 <body class="is-justify-content-center is-flex is-align-items-center" style="height: 100%">
     <main class="box container">
+        <section class="hero">
+            <div class="hero-body has-text-centered">
+                <p class="title">
+                    GTFS Mapping App
+                </p>
+                <p class="subtitle">
+                    Get the route information for all public transportation in Toronto. 
+                </p>
+            </div>
+        </section>
         <%- body %>
             <footer class="box">
                 <div class="content is-small has-text-centered">
