added fullwidth to buttons

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,7 +24,7 @@
             </div>
         </section>
         <%- body %>
-            <footer class="box">
+            <footer class="box mx-2">
                 <div class="content is-small has-text-centered">
                     <p>by <strong><a href="https://github.com/edakhmetov">Eduard Akhmetov.</a></strong></p>
                     <p>
